Added Submission Docs folder

--- a/src/app/components/shared/tree-logger/tree-logger.component.html
+++ b/src/app/components/shared/tree-logger/tree-logger.component.html
@@ -65,8 +65,8 @@
         <div class="info-item">
           <span class="info-label">Tree Code</span>
           <div class="code-display">
-            <span class="info-value code">{{ retrievedTree?.treeCode }}</span>
-            <button class="copy-btn" (click)="copyTreeCode(retrievedTree?.treeCode || '')" title="Copy code">
+            <span class="info-value code">{{ retrievedTree.treeCode }}</span>
+            <button class="copy-btn" (click)="copyTreeCode(retrievedTree.treeCode || '')" title="Copy code">
               <span class="material-symbols-outlined">content_copy</span>
             </button>
           </div>
